--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,8 @@
 RewriteEngine On
 
+# Redirigir /buscar-hoteles a index.php con parámetros
+RewriteRule ^buscar-hoteles$ index.php?route=buscar-hoteles [QSA,L]
+
 # Si el archivo o directorio existe, servirlo directamente
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
